fix(guider): add guider top overflow hidden, remove guider-container shadow, #INFR-1602, #INFR-1602

--- a/src/guider/styles/guider-tip.scss
+++ b/src/guider/styles/guider-tip.scss
@@ -1,12 +1,12 @@
 .thy-guider-tip-container {
     width: 310px;
     display: block;
-    box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.5);
     .thy-guider-tip-top {
         background-color: $primary;
         width: 100%;
         height: 190px;
         position: relative;
+        overflow: hidden;
         img {
             width: 100%;
             height: 100%;
